--- a/src/app/json-editor/json-editor.component.html
+++ b/src/app/json-editor/json-editor.component.html
@@ -1,1 +1,3 @@
-<p>json-editor works!</p>
+<div fxLayout="column" fxLayoutAlign="start center">
+  <textarea matInput (input)="emitValue()" [(ngModel)]="str"></textarea>
+</div>
