Added store, functionality to upload files and added monaco editor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="start center">
+<!-- <div fxLayout="column" fxLayoutAlign="start center">
   <div>
     Select two json-files to compare
   </div>
@@ -16,4 +16,6 @@
       </ul>
     </div>
   </div>
-</div>
+</div> -->
+<app-file-upload></app-file-upload>
+<app-uploaded-files></app-uploaded-files>
